Добавил новые модели со статистиками поездок по дням, возрастам и в общем

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -14,8 +14,6 @@ clean-targets:
   - "target"
   - "dbt_packages"
 
-
 models:
   dbt_scooters_new:
-    example:
-      +materialized: view
+    +materialized: table
