Добавил инкрементальную модель 21.07

--- a/models/properties.yml
+++ b/models/properties.yml
@@ -30,6 +30,11 @@ models:
     description: "Daily trips statistics by user age"
   - name: "trips_age_daily_stat"
     description: "Aggregation of daily trips statistics by user age"
+  - name: "trips_users"
+    description: "Rides enriched with users personal data"
+    config:
+      materialized: "incremental"
+
     
 
 
