--- a/models/properties.yml
+++ b/models/properties.yml
@@ -47,6 +47,12 @@ models:
       strategy: "merge"
       unique_key: [date]
       on_schema_change: "append_new_columns"
+  - name: "trips_concurrency"
+    description: "Number of simultaneous rides in time"
+    config:
+      materialized: "incremental"
+
+  
       
 
 
