--- a/models/properties.yml
+++ b/models/properties.yml
@@ -1,5 +1,9 @@
 version: 2
 
+macros:
+  - name: "updated_at"
+    description: "Columns which represents timestamp of the last update"
+
 sources:
   - name: "scooters_raw" 
     description: "Raw data provided by scooters service (the name of the scheme)"
