--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -14,7 +14,12 @@ clean-targets:
   - "target"
   - "dbt_packages"
 
+on-run-end:
+    - "grant usage on schema dbt_finance to finance;"
+    
 models:
   dbt_scooters_new:
     +materialized: table
     +on_schema_change: append_new_columns
+    finance:
+      +schema: "finance"
