--- a/models/properties.yml
+++ b/models/properties.yml
@@ -26,16 +26,26 @@ sources:
       - name: "trips"
         description: "Scooter trips"
         loaded_at_field: "finished_at"
-        freshness:
-          warn_after:
-            count: 1
-            period: "day"
-          error_after:
-            count: 3650
-            period: "day"
+        config:
+          freshness:
+            warn_after:
+              count: 1
+              period: "day"
+            error_after:
+              count: 3650
+              period: "day"
 
       - name: "users"
         description: "Users of scooter service"
+        columns:
+          - name: "sex"
+            description: "User gender"
+            data_tests:
+              - accepted_values:
+                  values: ["M","F"]
+              - not_null:
+                  config:
+                    severity: "warn"
 
       - name: "events"
         description: "Raw user events with duplicates"
