--- a/models/properties.yml
+++ b/models/properties.yml
@@ -122,6 +122,17 @@ models:
     description: "Trips can be updated by special user"
     config:
       materialized: "incremental"
+  - name: "sex_age_pivot"
+    description: "Trips per age pivoted by sex"
+    data_tests:
+      - unique_key:
+          columns: [ "age" ]
+    columns:
+      - name: "age"
+        description: "Numerical age of user"
+        data_tests:
+          - "dbt_utils.not_constant"
+    
 
       
 
