Добавил тест из пакета dbt_expectations 07.08

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -26,9 +26,11 @@ models:
       columns: true
     finance:
       +schema: "finance"
-    c
 seeds:
   dbt_scooters_new:
     +persist_docs:
       relation: true
       columns: true
+      
+vars:
+  'dbt_date:time_zone': 'Europe/Moscow'
