--- a/models/properties.yml
+++ b/models/properties.yml
@@ -64,6 +64,9 @@ models:
     description: "Tuned trips view"
     config:
       materialized: view
+    data_tests:
+      - row_count_equal:
+          compare_model: "source('scooters_raw', 'trips')"
   - name: "trips_stat"
     description: "Overall trips statistics"
   - name: "trips_stat_daily"
@@ -127,6 +130,8 @@ models:
     data_tests:
       - unique_key:
           columns: [ "age" ]
+      - dbt_expectations.expect_table_column_count_to_equal:
+          value: 3
     columns:
       - name: "age"
         description: "Numerical age of user"
