Добавил модель ретеншена  через внешний пакет 08.08

--- a/models/properties.yml
+++ b/models/properties.yml
@@ -117,8 +117,17 @@ models:
     description: "View with dedublicated events enriched with meaningful types" 
     config:
       materialized: "view"
+  - name: "events_stream"
+    description: "Standard event stream model based on events_full prepared for product analysis"
+    config:
+      materialized: "ephemeral"
   - name: "events_stat"
     description: "Percent of cancelled orders" 
+  - name: "book_scooter_retention"
+    description: >
+      Retention analysis which tells how many people
+      started search for scooter and finally booked it on or after
+      1, 7, 14 days (or weeks, months, years), etc
   - name: "trips_age_group"
     description: "Overall trips statistics by user age group"
   - name: "trips_by_user"
@@ -137,6 +146,8 @@ models:
         description: "Numerical age of user"
         data_tests:
           - "dbt_utils.not_constant"
+
+
     
 
       
